# CMAKE-Tutorial

./: CMakeLists.txt  README.txt
include/: do_something.h  parameters.h
src/: do_something.cpp  hello.cpp
